One more fix for chart sizing and overflowing

--- a/styles/_chart.scss
+++ b/styles/_chart.scss
@@ -79,7 +79,7 @@
 }
 
 .binary-chart-time-frame-picker {
-    height: 24px;
+    min-height: 24px;
 }
 
 .binary-chart-time-frame-button {
@@ -168,7 +168,7 @@
 }
 
 .binary-chart-toolbar {
-    height: 30px;
+    min-height: 30px;
     margin-bottom: 2px;
 }
 
